--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="description" content="" />
 
     <!-- Css -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!-- Dark Mode JS -->
-<!--     <script src="./js/darkMode.bundle.js"></script> -->
+<!--     <script src="/js/darkMode.bundle.js"></script> -->
     <!-- Favicons -->
     <link rel="shortcut icon" href="img/favicon.png" />
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -599,7 +599,7 @@
                 <div class="tab-pane fade show active relative" id="ownership" role="tabpanel" aria-labelledby="ownership-tab">
                   <figure class="flex items-center justify-center">
                     <img src="/img/milyem/nasil-milyem/uyelik.png" class="rounded-full p-14 dark:border-jacarta-600 max-w-[400px]"/>
-                    <img src="./img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
+                    <img src="/img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
                   </figure>
                 </div>
                 <div
@@ -610,11 +610,11 @@
                 >
                   <figure class="flex items-center justify-center">
                     <img
-                      src="./img/milyem/külce1.png"
+                      src="/img/milyem/külce1.png"
                       alt=""
                       class="rounded-full p-14 dark:border-jacarta-600 max-w-[400px]"
                     />
-                    <img src="./img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
+                    <img src="/img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
                   </figure>
                 </div>
                 <div
@@ -625,11 +625,11 @@
                 >
                   <figure class="flex items-center justify-center">
                     <img
-                    src="./img/milyem/külce1.png"
+                    src="/img/milyem/külce1.png"
                     alt=""
                     class="rounded-full p-14 dark:border-jacarta-600 max-w-[400px]"
                   />
-                    <img src="./img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
+                    <img src="/img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
                   </figure>
                 </div>
                 <div
@@ -640,11 +640,11 @@
                 >
                   <figure class="flex items-center justify-center">
                     <img
-                      src="./img/milyem/külce1.png"
+                      src="/img/milyem/külce1.png"
                       alt=""
                       class="rounded-full p-14 dark:border-jacarta-600 max-w-[400px]"
                     />
-                    <img src="./img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
+                    <img src="/img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
                   </figure>
                 </div>
                 <div
@@ -655,11 +655,11 @@
                 >
                   <figure class="flex items-center justify-center">
                     <img
-                      src="./img/milyem/külce1.png"
+                      src="/img/milyem/külce1.png"
                       alt=""
                       class="rounded-full p-14 dark:border-jacarta-600 max-w-[400px]"
                     />
-                    <img src="./img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
+                    <img src="/img/milyem/how-purchase.png" alt="" class="absolute animate-spin-slow" />
                   </figure>
                 </div>
               </div>
@@ -683,8 +683,7 @@
               </div>
               <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">İşçilik Ücreti Yok</h3>
               <p class="dark:text-jacarta-300">
-                Once you've set up your wallet of choice, connect it to OpenSeaby clicking the NFT Marketplacein the top
-                right corner.
+                Altın yatırımlarınızı ekstra masrafsız, doğrudan değerinde yapın.
               </p>
             </div>
             <div
@@ -698,8 +697,7 @@
               </div>
               <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">Kapalı Çarşı Güvencesiyle Alışveriş</h3>
               <p class="dark:text-jacarta-300">
-                Click Create and set up your collection. Add social links, a description, profile & banner images, and
-                set a secondary sales fee.
+                Tarihi güven ve deneyimle altın alım satımında güvenilirlik.
               </p>
             </div>
             <div
@@ -713,8 +711,7 @@
               </div>
               <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">Küçük Yatırımlarla Paranı Koru</h3>
               <p class="dark:text-jacarta-300">
-                Choose between auctions, fixed-price listings, and declining-price listings. You choose how you want to
-                sell your NFTs!
+                küçük miktarlarla altın yatırımına başlayarak birikimlerinizi değerlendirin.
               </p>
             </div>
           </div>
@@ -738,8 +735,7 @@
 
             <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">1. Profilim Sayfasına Git</h3>
             <p class="dark:text-jacarta-300">
-              It is commonly adopted, applies to secure message transmission either directly without any key
-              distribution in advance
+              Oluşturduğunuz üyelik üzerinden Hesap bilgilerinin yer aldığı sayfaya adım at.
             </p>
           </div>
         </div>
@@ -751,8 +747,7 @@
 
             <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">2. Fiziki Altına Çevir Sekmesine Git</h3>
             <p class="dark:text-jacarta-300">
-              Consider using anti-spoofing technology in conjunction with live detection to block unauthorized
-              users.
+              Açılan sayfada yer alan "Fiziki Altın" sekmesine tıkla ve ne kadar milyemin olduğunu kontrol et.
             </p>
           </div>
         </div>
@@ -764,8 +759,7 @@
 
             <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">Unutma 1000 MİLYEM = 1 GR</h3>
             <p class="dark:text-jacarta-300">
-              It is commonly adopted, applies to secure message transmission either directly without any key
-              distribution in advance
+              Fiziki altın elde edebilmek için en az 1000 MİLYEM gerekmektedir. 1000 ve 1000' in katları gram altına dönüştürülebilir.
             </p>
           </div>
         </div>
@@ -778,8 +772,7 @@
 
             <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">Fiziki Altın Farkı Öde</h3>
             <p class="dark:text-jacarta-300">
-              It is commonly adopted, applies to secure message transmission either directly without any key
-              distribution in advance
+              İstediğin fiziki altın ağırlığına göre farklı ücret çıkacaktır. Ücret farkını da tamamladıktan işlem başlayacaktır.
             </p>
           </div>
         </div>
@@ -791,8 +784,7 @@
 
             <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">Kargonu Takip Et</h3>
             <p class="dark:text-jacarta-300">
-              Consider using anti-spoofing technology in conjunction with live detection to block unauthorized
-              users.
+              Tüm işlemler tamamlandıktan sonra teslimat için gerekli işlemleri yapacağız ve takip edebilmen için seni bilgilendireceğiz.
             </p>
           </div>
         </div>
@@ -802,10 +794,9 @@
               <img src="/img/milyem/gif/avcunun_icinde.gif" class="rounded-full h-14 w-14">
             </div>
 
-            <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">Tebrikler Milyemlerin Avucunun İçerisinde</h3>
+            <h3 class="mb-4 font-display text-lg text-jacarta-700 dark:text-white">Tebrikler Milyemler Avucunun İçerisinde</h3>
             <p class="dark:text-jacarta-300">
-              It is commonly adopted, applies to secure message transmission either directly without any key
-              distribution in advance
+              Kapalı Çarşı Derneği güvencesiyle milyemlerin fiziksel altına dönüştü.
             </p>
           </div>
         </div>
@@ -1214,8 +1205,8 @@
     </footer>
 
     <!-- JS Scripts -->
-    <script src="./js/app.bundle.js"></script>
-    <script src="./js/videoLightbox.bundle.js"></script>
+    <script src="/js/app.bundle.js"></script>
+    <script src="/js/videoLightbox.bundle.js"></script>
 
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
 
