--- a/404.html
+++ b/404.html
@@ -202,7 +202,7 @@
                   </li>
                   <li>
                     <a
-                      href="home-7.html"
+                      href="/index.html"
                       class="flex items-center justify-between rounded-xl px-5 py-2 transition-colors hover:bg-jacarta-50 hover:text-accent focus:text-accent dark:hover:bg-jacarta-600"
                     >
                       <span class="font-display text-sm text-jacarta-700 dark:text-white">Crypto Consultant</span>
