--- a/vizyonumuz.html
+++ b/vizyonumuz.html
@@ -23,7 +23,7 @@
     <header class="js-page-header fixed top-0 z-[50] w-full backdrop-blur transition-colors">
       <div class="flex items-center px-6 pb-2 pt-4 xl:px-24">
         <!-- Logo -->
-        <a href="/home-7.html" class="shrink-0 p-1 rounded-full">
+        <a href="//index.html" class="shrink-0 p-1 rounded-full">
           <img src="/img/milyem/logo-and-milyem.png" class="max-h-20 dark:hidden" alt="Milyem Gold |  Marketplace" />
           <img src="/img/milyem/logo-and-milyem.png" class="hidden max-h-20 dark:block" alt="Milyem Gold |  Marketplace" />
         </a>
@@ -31,7 +31,7 @@
           <!-- Mobile Logo / Menu Close -->
           <div class="t-0 fixed left-0 z-10 flex w-full items-center justify-between bg-white p-6 dark:bg-jacarta-800 lg:hidden">
             <!-- Mobile Logo -->
-            <a href="/home-7.html" class="shrink-0">
+            <a href="//index.html" class="shrink-0">
               <img src="/img/milyem/logo-and-milyem.png" class="max-h-20 dark:hidden" alt="Milyem Gold" />
               <img src="/img/milyem/logo-and-milyem.png" class="hidden max-h-20 dark:block" alt="Milyem Gold" />
             </a>
@@ -47,7 +47,7 @@
           <nav class="navbar w-full">
             <ul class="flex flex-col lg:flex-row">
               <li class="nav-item group relative">
-                <a href="/home-7.html" class="dropdown-toggle flex items-center justify-between py-3.5 font-display text-base text-jacarta-700 hover:text-[#caa754] focus:text-[#caa754] dark:text-white dark:hover:text-[#caa754] dark:focus:text-[#caa754] lg:px-5" id="navDropdown-1">
+                <a href="//index.html" class="dropdown-toggle flex items-center justify-between py-3.5 font-display text-base text-jacarta-700 hover:text-[#caa754] focus:text-[#caa754] dark:text-white dark:hover:text-[#caa754] dark:focus:text-[#caa754] lg:px-5" id="navDropdown-1">
                   Anasayfa
                 </a>
               </li>
