html klasörüne taşındı.

--- a/html/iletisim.html
+++ b/html/iletisim.html
@@ -281,9 +281,7 @@
 
     <main class="">
       <!-- Page Title -->
-      <section
-        class="relative bg-contain bg-right-top bg-no-repeat pt-32 pb-16"
-      >
+      <section class="relative bg-contain bg-right-top bg-no-repeat pt-32 pb-16">
         <div class="container relative z-10">
           <h1 class="text-center font-display text-4xl font-medium text-jacarta-700">İletişim</h1>
         </div>
